--- a/Debug/makefile
+++ b/Debug/makefile
@@ -9,7 +9,7 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
--include drivers/Src/subdir.mk
+-include driver/Src/subdir.mk
 -include Startup/subdir.mk
 -include Src/subdir.mk
 -include objects.mk
@@ -34,34 +34,34 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := c-oop-gpio-driver
+BUILD_ARTIFACT_NAME := simple-systick-arm4
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-c-oop-gpio-driver.elf \
+simple-systick-arm4.elf \
 
 MAP_FILES += \
-c-oop-gpio-driver.map \
+simple-systick-arm4.map \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-c-oop-gpio-driver.list \
+simple-systick-arm4.list \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: c-oop-gpio-driver.elf secondary-outputs
+main-build: simple-systick-arm4.elf secondary-outputs
 
 # Tool invocations
-c-oop-gpio-driver.elf c-oop-gpio-driver.map: $(OBJS) $(USER_OBJS) C:\Users\r.freitas\Documents\Rafaela\Cursos\(MCU2)\My_workspace\c-oop-gpio-driver\STM32F401RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "c-oop-gpio-driver.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\r.freitas\Documents\Rafaela\Cursos\(MCU2)\My_workspace\c-oop-gpio-driver\STM32F401RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="c-oop-gpio-driver.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+simple-systick-arm4.elf simple-systick-arm4.map: $(OBJS) $(USER_OBJS) D:\Estudos\Udemy\My_workspace\target\simple-systick-arm4\STM32F401RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "simple-systick-arm4.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\Estudos\Udemy\My_workspace\target\simple-systick-arm4\STM32F401RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="simple-systick-arm4.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -70,14 +70,14 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-c-oop-gpio-driver.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "c-oop-gpio-driver.list"
+simple-systick-arm4.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "simple-systick-arm4.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) c-oop-gpio-driver.elf c-oop-gpio-driver.list c-oop-gpio-driver.map default.size.stdout
+	-$(RM) default.size.stdout simple-systick-arm4.elf simple-systick-arm4.list simple-systick-arm4.map
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
